--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,3 +27,8 @@ flutter:
   assets:
     - assets/images/
     - .env
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/cm-logo.png"
