--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   shared_preferences: ^2.0.13
   cached_network_image: ^3.2.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
